[gd_scene load_steps=22 format=3 uid="uid://p6yfac4vlqls"]

[ext_resource type="Script" uid="uid://jc77jnbbkuvs" path="res://sea.gd" id="1_lotjo"]
[ext_resource type="PackedScene" uid="uid://cbrtvx1fx65q6" path="res://ship.tscn" id="1_xwcm7"]
[ext_resource type="Script" uid="uid://1p3ot4ug2gag" path="res://user_controller.gd" id="2_mehw6"]
[ext_resource type="PackedScene" uid="uid://rj64e3jgod0g" path="res://abilities/cannon.tscn" id="3_ari0p"]
[ext_resource type="Script" uid="uid://d0pemlxry8a1c" path="res://player_camera.gd" id="4_a0flf"]
[ext_resource type="PackedScene" uid="uid://cgsqmrehcpm3w" path="res://abilities/auto_cannon_ability.tscn" id="4_pfxiy"]
[ext_resource type="Script" uid="uid://cssc7sab12i3b" path="res://abilities/friendly_ship_ability.gd" id="5_7u2wy"]
[ext_resource type="PackedScene" uid="uid://bw1hebeplamra" path="res://src/hitpoints/hitpoint_bar.tscn" id="8_24krr"]
[ext_resource type="Script" uid="uid://c5taoms3yt1wi" path="res://wind.gd" id="8_pfxiy"]
[ext_resource type="PackedScene" uid="uid://pbdp3pu1ndyl" path="res://abilities/auto_aim_cannon_controller.tscn" id="8_vmxnl"]
[ext_resource type="PackedScene" uid="uid://dpdoenrgimjkw" path="res://abilities/ability_cards.tscn" id="9_ari0p"]
[ext_resource type="Script" uid="uid://colodbh4ytdb1" path="res://wind_particles.gd" id="10_7u2wy"]
[ext_resource type="Script" uid="uid://ct0mm4rbfdlm6" path="res://background.gd" id="10_7uhs0"]
[ext_resource type="Script" uid="uid://dwn28qn3r10gh" path="res://cargo_hold.gd" id="10_jolub"]
[ext_resource type="PackedScene" uid="uid://b66eer0eet1j7" path="res://src/hud/hud.tscn" id="11_24krr"]
[ext_resource type="PackedScene" uid="uid://kn70kmto5cby" path="res://abilities/barel_dropping_ability.tscn" id="11_ifsnf"]
[ext_resource type="PackedScene" uid="uid://88md3i7p5702" path="res://kill_screen.tscn" id="12_7uhs0"]
[ext_resource type="PackedScene" uid="uid://bqqm1hsravcgy" path="res://src/sound/sail.tscn" id="12_gdvtx"]
[ext_resource type="PackedScene" uid="uid://uws8en35sklf" path="res://src/spawners/enemy_spawner/enemy_spawner.tscn" id="13_ifsnf"]
[ext_resource type="PackedScene" uid="uid://cuk2drxe2dov2" path="res://cargo_counter.tscn" id="15_f616m"]
[ext_resource type="PackedScene" uid="uid://btlqah2g7f5lk" path="res://src/survivor_time/survivor_time.tscn" id="19_yode5"]

[node name="Sea" type="Node"]
script = ExtResource("1_lotjo")

[node name="PlayerShip" parent="." node_paths=PackedStringArray("controller") groups=["frendly", "wind_affected"] instance=ExtResource("1_xwcm7")]
unique_name_in_owner = true
rotation = -1.5708
slide_on_ceiling = false
power = 150
friction = 20
ship_length = 50
type = 0
controller = NodePath("UserController")

[node name="AutoCannonAbility" parent="PlayerShip" instance=ExtResource("4_pfxiy")]
z_index = -2

[node name="FriendlyShipAbility" type="Node" parent="PlayerShip"]
script = ExtResource("5_7u2wy")

[node name="PlayerCamera" type="Camera2D" parent="PlayerShip"]
script = ExtResource("4_a0flf")

[node name="Cannon" parent="PlayerShip" instance=ExtResource("3_ari0p")]
position = Vector2(36, 0.000130355)

[node name="AutoAimCannonController" parent="PlayerShip/Cannon" instance=ExtResource("8_vmxnl")]

[node name="UserController" type="Node" parent="PlayerShip"]
script = ExtResource("2_mehw6")

[node name="HitpointBar" parent="PlayerShip" instance=ExtResource("8_24krr")]
max_hitpoints = 1

[node name="CargoHold" type="Node" parent="PlayerShip"]
script = ExtResource("10_jolub")

[node name="BarrelDroppingAbility" parent="PlayerShip" instance=ExtResource("11_ifsnf")]

[node name="Sail" parent="PlayerShip" instance=ExtResource("12_gdvtx")]

[node name="WindParticles" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("10_7u2wy")

[node name="Wind" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_pfxiy")
max_speed = 20.0
min_speed = 5.0
max_change_duration = 20.0
min_change_duration = 5.0

[node name="WindChangeTimer" type="Timer" parent="Wind" groups=["GameTimers"]]
wait_time = 15.0
one_shot = true

[node name="EnemySpawner" parent="." instance=ExtResource("13_ifsnf")]

[node name="BarrelSpawnTimer" type="Timer" parent="." groups=["GameTimers"]]
autostart = true

[node name="ManOverboardSpawnTimer" type="Timer" parent="." groups=["GameTimers"]]
wait_time = 10.0
autostart = true

[node name="Background" type="Node2D" parent="."]
z_index = -10
script = ExtResource("10_7uhs0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AbilityCards" parent="CanvasLayer" instance=ExtResource("9_ari0p")]
unique_name_in_owner = true
visible = false

[node name="KillScreen" parent="CanvasLayer" instance=ExtResource("12_7uhs0")]
unique_name_in_owner = true
visible = false

[node name="CargoCounter" parent="CanvasLayer" instance=ExtResource("15_f616m")]
unique_name_in_owner = true

[node name="SurvivorTime" parent="CanvasLayer" instance=ExtResource("19_yode5")]
unique_name_in_owner = true

[node name="Hud" parent="." instance=ExtResource("11_24krr")]
unique_name_in_owner = true

[node name="Properties" type="Node" parent="."]

[connection signal="on_death" from="PlayerShip/HitpointBar" to="." method="_on_hitpoint_bar_on_death"]
[connection signal="cargo_updated" from="PlayerShip/CargoHold" to="." method="_on_cargo_hold_cargo_updated"]
[connection signal="timeout" from="Wind/WindChangeTimer" to="Wind" method="randomize_wind"]
[connection signal="timeout" from="Wind/WindChangeTimer" to="Wind" method="schedule_next_time_change"]
[connection signal="timeout" from="BarrelSpawnTimer" to="." method="_on_barrel_spawn_timer_timeout"]
[connection signal="timeout" from="ManOverboardSpawnTimer" to="." method="_on_man_overboard_spawn_timer_timeout"]
[connection signal="ability_selected" from="CanvasLayer/AbilityCards" to="." method="_on_ability_cards_ability_selected"]
[connection signal="finished" from="CanvasLayer/KillScreen" to="." method="_on_kill_screen_finished"]
